# VecTile

./: .gitignore  LICENSE  README.md  Vectile.bat  Vectile.command  pyproject.toml  requirements.txt  run.py  vectile.sh
app/: cli.py  main.py  pdf_input.py  preprocess.py  session.py
app/engines/: __init__.py  base.py  potrace_engine.py  vtracer_engine.py
app/printing/: __init__.py  decorations.py  paper_sizes.py  pdf_generator.py  tiler.py
app/static/: app.js  index.html  style.css
docs/: INSTALL.md  USAGE.md
