[project]
name = "vectile"
version = "0.1.0"
description = "Local-first image vectorizer with live preview, color palette editing, and (eventually) tiled poster printing."
readme = "README.md"
license = { text = "GPL-2.0-only" }
requires-python = ">=3.10"
authors = [
    { name = "Vectile" },
]
keywords = ["vectorize", "svg", "image", "potrace", "vtracer", "poster"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Web Environment",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: GNU General Public License v2 (GPLv2)",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Multimedia :: Graphics :: Graphics Conversion",
]
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "python-multipart",
    "vtracer",
    "Pillow",
    "numpy",
    "pypdfium2",
    "reportlab",
    "svglib",
]

[project.scripts]
vectile = "app.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
# hatchling automatically includes non-Python files (e.g. app/static/*) inside
# the package directory, so the bundled UI ships with the wheel.
